update color scheme

--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -30,3 +30,61 @@
 .hide {
   color: white;
 }
+
+.navbarcolor{
+  color: white !important;
+  background-color: #0c4d70 !important;
+}
+
+.hero{
+  color: white !important;
+background-color: #0077B6 !important;
+}
+
+.buttoncolor{
+  color: white;
+  background-color: #CAF0F8 !important;
+}
+
+.colortile1{
+  color: white;
+  background-color: #0096C7 !important;
+}
+
+.colortile2{
+  color: white;
+  background-color: #0096C7 !important;
+}
+
+.colortile3{
+  color: white;
+  background-color: #00B4D8 !important;
+}
+
+.colortile4{
+  color: white;
+  background-color: #00B4D8 !important;
+}
+
+.colortile5{
+  color: white;
+  background-color: #48CAE4 !important;
+}
+
+.navbar-item{
+  color: white !important;
+}
+
+.title{
+  color: white !important;
+}
+
+.subtitle{
+  color: white !important;
+}
+
+.button{
+  color: rgb(0, 0, 0) !important;
+  background-color: #a1b3c9 !important;
+
+}
