--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,8 +4,8 @@
 // Update blue
 $blue: #72d0eb;
 // Add pink and its invert
-$pink: #48BFE3;
-$pink-invert: #6930C3;
+$pink: #0096C7;
+$pink-invert: #f7f6f8;
 // Add a serif family
 $family-serif: "Merriweather", "Georgia", serif;
 $white: white;
@@ -28,3 +28,4 @@ $background: $white;
 @import 'bulma/bulma';
 
 @import 'font-awesome';
+
