--- a/app/views/apps/_interview.html.erb
+++ b/app/views/apps/_interview.html.erb
@@ -6,7 +6,7 @@
 <p class="subtitle">Date</p>
 <p><%=interview.interview_date%></p>
 <div class="buttons">
-          <a class="button is-primary" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
+          <a class="button" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
           </div>
 </div>
 
