--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+<nav class="navbar navbarcolor" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <div class="navbar-item">
      ApplyYourself
