--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,6 +1,6 @@
 <section class="index-index mx-2">
   <div class="button-shift">
-    <div class="button my-4 py-2 is-primary is-light is-outlined is-rounded"><%= link_to "Create New Application", '/companies' %>
+    <div class="button my-4 py-2 is-outlined is-rounded"><%= link_to "Create New Application", '/companies' %>
     </div>
   </div>
   <div class="apps">
