--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,7 +7,7 @@ $blue: #72d0eb;
 $pink: #0096C7;
 $pink-invert: #f7f6f8;
 // Add a serif family
-$family-serif: "Merriweather", "Georgia", serif;
+$family-serif: "Lato";
 $white: white;
 
 
