designed the show page and correctly created pdfs for download

--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -92,4 +92,11 @@ background-color: #0077B6 !important;
   display:flex;
   flex-direction: row;
   justify-content: space-around;
+  margin-bottom: 10 px;
+}
+
+.border_int {
+  border: 2px solid white;
+  padding: 20px;
+  margin-bottom: 30px;
 }
