--- a/app/views/apps/_interview.html.erb
+++ b/app/views/apps/_interview.html.erb
@@ -1,13 +1,19 @@
 <article class="interview">
-
-<div class='interview-preview'>
-<p class="subtitle">Type</p>
-<p><%=interview.interview_type%></h3>
-<p class="subtitle">Date</p>
-<p><%=interview.interview_date%></p>
-<div class="buttons">
-          <a class="button" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
-          </div>
-</div>
-
+  <div class="border_int">
+    <div class='interview-preview'>
+      <p class="subtitle">Interview Number: <%=interview.interview_number%></p>
+      <p class="subtitle">Type: <%=interview.interview_type%></p>
+      <p class="subtitle">Date: <%=interview.interview_date%></p>
+    </div>
+    <div class='interview-preview' style="padding-bottom: 10px;">
+      <% if interview.interview_notes != '' %>
+        <p class="subtitle">Notes: <%=interview.interview_notes%></p>
+      <% end %>
+    </div>
+    <div class='interview-preview'>
+      <div class="buttons">
+                <a class="button" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
+                </div>
+      </div>
+  </div>
 <article>
