--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -15,7 +15,7 @@
 
         <div class="field">
           <%= form.label :resume, "Resume (required)" %><br>
-          <%= form.text_field :resume %>
+          <%= form.file_field :resume %>
           <% @app.errors.full_messages_for(:resume).each do |message| %>
             <div><%= message %></div>
           <% end %>
@@ -23,7 +23,7 @@
 
         <div class="field">
           <%= form.label :cover_letter %><br>
-          <%= form.text_field :cover_letter %>
+          <%= form.file_field :cover_letter %>
           <% @app.errors.full_messages_for(:cover_letter).each do |message| %>
             <div><%= message %></div>
           <% end %>
@@ -31,7 +31,7 @@
 
         <div class="field">
           <%= form.label :project %><br>
-          <%= form.text_field :project %>
+          <%= form.file_field :project %>
           <% @app.errors.full_messages_for(:project).each do |message| %>
             <div><%= message %></div>
           <% end %>
