moved title back to front

--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,4 +1,4 @@
-<section class="hero my-4 has-text-centered">
+<section class="hero my-4 ">
   <div class="hero-body" >
     <p class="title">
    <%= @app.job_title%>
