--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -2,11 +2,11 @@
 <html>
 <nav class="navbar navbarcolor" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <div class="navbar-item">
-     ApplyYourself
-     </div>
-     <a class="navbar-item"  href="/">
-        Applications
+     <a class="navbar-item" style= "font-size: 25px; font-family: Garamond"  href="/">
+        ApplyYourself
+     </a>
+     <a class="navbar-item"  href='/companies'>
+        Start New Application
      </a>
   </div>
   <div class="navbar-menu">
