Create New Application button formatted

--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -88,6 +88,9 @@ background-color: #0077B6 !important;
   color: rgb(0, 0, 0) !important;
   background-color: #a1b3c9 !important;
 }
+.button_create{
+  background-color: #206ecc !important;
+}
 .interview-preview {
   display:flex;
   flex-direction: row;
