made the button work

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,7 +1,8 @@
 <section class="index-index mx-2">
   <div class="button-shift">
-    <div class="button my-4 py-2 is-outlined is-rounded" href="/companies" role="button">Create Application
-    </div>
+    <a class="button my-4 py-2 is-outlined is-rounded"
+     href="/companies" role="button">Create Application
+    </a>
   </div>
   <div class="apps">
     <%= render partial: "app", locals: {apps:@apps} %>
