changed the font size of interviews to better fit

--- a/app/views/apps/_interview.html.erb
+++ b/app/views/apps/_interview.html.erb
@@ -1,9 +1,9 @@
 <article class="interview">
   <div class="border_int">
-    <div class='interview-preview'>
-      <p class="subtitle">Interview Number: <%=interview.interview_number%></p>
-      <p class="subtitle">Type: <%=interview.interview_type%></p>
-      <p class="subtitle">Date: <%=interview.interview_date%></p>
+    <div class='interview-preview' style= "font-size: 15px !important;">
+      <p style= "font-size: 17px;"> Interview Number: <%=interview.interview_number%></p>
+      <p style= "font-size: 17px;"> Type: <%=interview.interview_type%></p>
+      <p style= "font-size: 17px;"> Date: <%=interview.interview_date%></p>
     </div>
     <div class='interview-preview' style="padding-bottom: 10px;">
       <% if interview.interview_notes != '' %>
