--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -108,7 +108,7 @@
           <a class="button" style="margin:auto;" href="<%=@app.id%>/edit" role="button">Edit this Application</a> 
         </div>
         <div class="buttons" >
-        <a class="button" style="margin:auto;"<%= link_to "Destroy", app_path(@app),
+        <a class="button" style="margin:auto;"<%= link_to "Delete Application", app_path(@app),
                   method: :delete,
                   data: { confirm: "Are you sure you would like to delete this application?" } %></a>
         </div>
